<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/general_info"
            android:textColor="@android:color/black"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum "/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/series_name"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/series_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Series name..."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/isbn"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Isbn..."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/format"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Format..."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/page_count"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Pages..."/>

    </LinearLayout>

</merge>